--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-compound-timer": "^1.2.0",
+    "react-confirm-alert": "^2.6.2",
     "react-dom": "^16.13.1",
     "react-i18next": "^11.7.3",
     "react-icons": "^3.11.0",
@@ -55,5 +56,5 @@
     "postcss-cli": "^8.0.0",
     "tailwindcss": "^1.8.10"
   },
-  "proxy": "https://service-system-backend.herokuapp.com/"
+  "proxy": "http://127.0.0.1:5000"
 }
