--- a/package.json
+++ b/package.json
@@ -59,5 +59,6 @@
     "autoprefixer": "^10.0.0",
     "postcss-cli": "^8.0.0",
     "tailwindcss": "^1.8.10"
-  }
+  },
+  "proxy": "http://127.0.0.1:5000"
 }
