--- a/package.json
+++ b/package.json
@@ -63,5 +63,5 @@
     "postcss-cli": "^8.0.0",
     "tailwindcss": "^1.8.10"
   },
-  "proxy": "http://127.0.0.1:5000"
+  "proxy": "http://localhost:5000"
 }
